Fix xdg call
As always i didn't even attempt to test.